# tuxSCP

./: Cargo.toml  Makefile  README.md
packaging/: build-appimage.sh  build-deb.sh  gen-icon.py  tuxscp.desktop
src/: app.rs  main.rs  worker.rs
src/models/: connection.rs  file_entry.rs  mod.rs  session.rs  transfer.rs
src/protocols/: mod.rs
src/ui/: connect_dialog.rs  file_panel.rs  mod.rs  session_manager.rs  toolbar.rs  transfer_panel.rs
