[package]
name = "tuxscp"
version = "0.2.1"
edition = "2021"
description = "A native Linux SSH/SFTP/FTP client — TuxSCP"
authors = ["TuxSCP Contributors"]
license = "MIT"

[[bin]]
name = "tuxscp"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["default_fonts", "wgpu"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }

# SSH / SFTP
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# FTP / FTPS
suppaftp = { version = "6", features = ["native-tls"] }

# Async runtime (used for FTP)
tokio = { version = "1", features = ["full"] }

# Serialization (sessions / config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dirs = "5"
crossbeam-channel = "0.5"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
human_bytes = "0.4"
parking_lot = "0.12"
rfd = "0.14"
rayon = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
